fjord-compiler/test/errors/Sharing.fj
module codegen.expressions.Sharing

import TestUtil

useSharedInt : Int -> Int -> Int
useSharedInt x y =
  rm x y

shareInt : Int -> Int
shareInt x =
  useSharedInt x x

myInt : Int
myInt = shareInt 5
